# LUMINA

./: .gitignore  CMakeLists.txt  README.md
NewProject/: LUMINA.jucer
NewProject/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
NewProject/Builds/MacOSX/LUMINA.xcodeproj/: project.pbxproj
NewProject/Builds/MacOSX/LUMINA.xcodeproj/project.xcworkspace/xcuserdata/szkstudio.xcuserdatad/: UserInterfaceState.xcuserstate
NewProject/Builds/MacOSX/LUMINA.xcodeproj/xcshareddata/xcschemes/: LUMINA - VST3.xcscheme
NewProject/Builds/MacOSX/LUMINA.xcodeproj/xcuserdata/szkstudio.xcuserdatad/xcschemes/: xcschememanagement.plist
NewProject/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
NewProject/Builds/MacOSX/NewProject.xcodeproj/project.xcworkspace/xcuserdata/szkstudio.xcuserdatad/: UserInterfaceState.xcuserstate
NewProject/Builds/MacOSX/NewProject.xcodeproj/xcshareddata/xcschemes/: NewProject - VST3.xcscheme
NewProject/Builds/MacOSX/NewProject.xcodeproj/xcuserdata/szkstudio.xcuserdatad/xcschemes/: xcschememanagement.plist
NewProject/JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
NewProject/Source/: PluginProcessor.cpp
NewProject/Source/DSP/: AnalyzerCore.h  MSEncoder.h  SpectralEngine.h
NewProject/Source/GUI/: AnalysisFifo.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Readme.md
Source/DSP/: AnalyzerCore.cpp  AnalyzerCore.h  HPSSEngine.cpp  HPSSEngine.h  MSEncoder.cpp  MSEncoder.h  MaskingModel.cpp  MaskingModel.h  MultiResSTFT.cpp  MultiResSTFT.h  OnsetDetector.cpp  OnsetDetector.h  SpectralEngine.cpp  SpectralEngine.h
Source/GUI/: AbletonLookAndFeel.h  AnalysisFifo.h  GRMeter.cpp  GRMeter.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
